# ConsumeAI

./: .gitignore  README.md  chat.py  main.py  pyproject.toml  pytest.ini  sample.py  test.py
agent/: base.py
alt/: main.py
backend/: .gitignore  app.py  pyproject.toml
backend/db/: load_documents.py
backend/utils/: __init__.py  embedding.py  preprocess.py  retriever.py  splitter.py  vector_store.py
config/: config.py
go/: go.mod  main.go
services/: employee_service.py  item_inventory_service.py
src/: cli.py  config.py
src/modules/utils/: log.py
tests/: test_load_documents.py  test_preprocess.py  test_splitter.py
utils/: config.py  import_utils.py
