[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "gcornejo441",email = "gcornejo441@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "chromadb (>=0.6.2,<0.7.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "unstructured[csv,docx] (>=0.16.13,<0.17.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"