[project]
name = "consumeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "bs4>=0.0.2",
    "ollama>=0.6.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
