[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Cornejo",email = "gcornejo441@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "chromadb (>=0.6.2,<0.7.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"